Add telemetry, command args, and group chat features
Introduces anonymous telemetry reporting with configurable options. Enhances custom command support with typed arguments and tab completion. Expands group chat functionality with join requests, invite acceptance/denial, and related commands. Improves announcements randomization and language utility methods. Updates mod version to f21.0.beta6.